# solitaire

./: Cargo.toml  check.sh  log.txt  perf.sh  readme.md  ttd.txt
data/: 1.kpat.save.xml  2.kpat.save.xml  3.kpat.save.xml  4.kpat.save.xml
docs/: game_state.odt  suits.txt
examples/: test_card_vec.rs
refs/: bbigras_namespace.rs
src/: card.rs  deck.rs  group.rs  layout.rs  lib.rs  main.rs  misc.rs  ttd.txt
