[package]
name = "solitaire"
version = "0.1.0"
edition = "2021"
default-run = "solitaire"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
console_engine = "2.6.0"
fixedstr = "0.2.10"
format_num = "0.1.0"
rand = "0.8.5"
strum = "0.24.1"

[[bin]]
name = "test_card_vec_perf"
test = false
